	- fix refresh bug that occurs when reverse video is set on a cell
	  containing a space and with the same bg and fg color, red hat bug
	  #830236.
        - fix crash that may happen if an x error is received after a terminal
          window/popup has been destroyed already.
        - removed superfluous 0 digit from sgr terminfo sequence.

9.20 Sat Apr 26 16:22:27 CEST 2014
        - (libptytty) fix bug that prevented urxvtd from writing utmp
          entries when using --fork (reported by Ryan Kavanagh).
        - security bugfix: window property values could be queried even
          in secure mode (reported by Conor McCarthy).
	- fix build when perl is enabled and fading is disabled.
	- fix regression that broke continuous scrolling when pressing
	  and holding the scrollbar up or down button, gentoo bug #493992.
	- increase the maximum length of a command sequence to 32k bytes,
          to allow longer OSC sequences (previous limit was 2k).
        - new Ctrl-Meta-c and Ctrl-Meta-v bindings to interact with
          the CLIPBOARD selection.
        - new extension: selection-to-clipboard.
        - the extensions macosx-clipboard and macosx-clipboard-native
          are deprecated and will be removed in the next release.
          Support for the clipboard on OS X can be more generally
          enabled by setting the XQuartz preference to sync the OS X
          pasteboard and the X11 clipboard.

9.19 Sun Oct 27 17:16:07 CET 2013
	- work around perl 5.18.0 breakage in tabbed extension
          (reported by Karol Blazewicz) and in pod (Dominic Hargreaves).
	- fix regression that caused the double-click word selection to
	  erroneously include a tab on the left of the selected word.
        - implement FOCUS variable and focus_fade function in background
          expression, to allow focus-sensitive background images.
	- add support for the set cursor style (DECSCUSR) control
	  function.
	- honour cursorColor also when the cursor style is underline.